--- a/_pages/dv_project.html
+++ b/_pages/dv_project.html
@@ -17,10 +17,10 @@ permalink: /projects/dv/
 
         <p>Note: This assignment/project is part of a academic course and is not intended to be copied or used.</p>
 
-        <video width="500" controls>
+        <!-- <video width="500" controls>
             <source src="https://snehalchaudhari98.github.io/dv/demographic/img/completed_homework.mp4"
                 type="video/mp4">
             Your browser does not support the video tag.
-        </video>
+        </video> -->
     </div>
 </div>
